# Tomix---AI-voice-Assistant

./: .gitignore  COMMANDS.md  README.md  Tomix.spec  aleksandr_releases.json  config.py  jarvis_doklad.md  main.py  old_terminal.py  plugin_manager.py  requirements.txt  rhvoice_releases.json  rhvoice_repos.json  tomix.db  weather.py
extra/: gemini_key_setup.txt
plugins/: test.py  weather.py
plugins_rust/audio_viz/: Cargo.toml  pyproject.toml
plugins_rust/audio_viz/src/: lib.rs
plugins_rust/file_ops/: Cargo.toml  pyproject.toml
plugins_rust/file_ops/src/: lib.rs
plugins_rust/jarvis_stats/: Cargo.toml  pyproject.toml
plugins_rust/jarvis_stats/src/: lib.rs
plugins_rust/media_ctrl/: Cargo.toml
plugins_rust/media_ctrl/src/: lib.rs
plugins_rust/screen_catcher/: Cargo.toml  pyproject.toml
plugins_rust/screen_catcher/src/: lib.rs
setup/: setup.py
tests/: test_all.py
web/server/: index.html  main.py  social.html  style.css  tomix.db
