[package]
name = "media_ctrl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "media_ctrl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Media_Control",
    "Foundation_Collections",
] }