[package]
name = "screen_catcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "screen_catcher"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
xcap = "0.9.3"
base64 = "0.22"
image = "0.25"